Added business login start

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,10 @@
                 android:backgroundTint="@color/orange"
                 android:clickable="true"
                 android:focusable="true"
-                android:onClick="ownerLogin"
-                android:text="Pet Owner Login"
+                android:onClick="businessLogin"
+                android:text="Business Login"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="23sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,10 +58,10 @@
                 android:backgroundTint="@color/orange"
                 android:clickable="true"
                 android:focusable="true"
-                android:onClick="professionalLogin"
-                android:text="Pet Professional Login"
+                android:onClick="volunteerLogin"
+                android:text="Volunteer Login"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="23sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
