--- a/app/src/main/res/layout/activity_business_login.xml
+++ b/app/src/main/res/layout/activity_business_login.xml
@@ -61,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.8"
-                    android:text="Hello pet owner! Please login below" />
+                    android:text="Hello business owner! Please login below" />
 
                 <View
                     android:layout_width="match_parent"
