--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="very_light_grey">#EAEAEA</color>
+    <color name="dark_grey">#515151</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF862B</color>
-    <color name="green">#3EA233</color>
+    <color name="green">#358A2C</color>
 </resources>
