Finished testing and detailed signup for the backend, users are being created properly

--- a/app/src/main/res/layout/activity_business_detailed_signup.xml
+++ b/app/src/main/res/layout/activity_business_detailed_signup.xml
@@ -79,16 +79,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:hint="Contact Person (Name and Position)"
+                    android:hint="Contact Person Name"
                     android:inputType="text" />
-
-                <EditText
-                    android:id="@+id/editTextContactEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:hint="Contact Email"
-                    android:inputType="textEmailAddress" />
 
                 <EditText
                     android:id="@+id/editTextContactPhone"
@@ -123,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:hint="Estimated Quantity of Surplus (in pounds or by portion)"
-                    android:inputType="number" />
+                    android:inputType="text" />
 
                 <EditText
                     android:id="@+id/editTextPickupTime"
@@ -131,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:hint="Pickup Availability Time"
-                    android:inputType="time" />
+                    android:inputType="text" />
 
                 <!-- Distribution Preferences Section Title -->
                 <TextView
