--- a/app/src/main/res/layout/activity_volunteer_profile.xml
+++ b/app/src/main/res/layout/activity_volunteer_profile.xml
@@ -291,6 +291,6 @@
         app:itemIconTint="@drawable/nav_selector"
         app:itemRippleColor="@android:color/transparent"
         app:labelVisibilityMode="unlabeled"
-        app:menu="@menu/organization_menu" />
+        app:menu="@menu/volunteer_menu" />
 
 </RelativeLayout>
