--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF862B</color>
+    <color name="yellow">#FFE4B0</color>
     <color name="green">#358A2C</color>
 </resources>
