--- a/app/src/main/res/layout/activity_volunteer_detailed_signup.xml
+++ b/app/src/main/res/layout/activity_volunteer_detailed_signup.xml
@@ -20,8 +20,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="146dp"
-            android:layout_weight="1"
-            android:src="@drawable/volunteer_icon" />
+            android:layout_weight="1" />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
