--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -216,7 +216,6 @@
         </LinearLayout>
     </ScrollView>
 
-    <!-- Bottom Navigation Menu -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -232,6 +231,7 @@
         app:itemIconSize="30dp"
         app:itemIconTint="@drawable/nav_selector"
         app:itemRippleColor="@android:color/transparent"
-        app:labelVisibilityMode="unlabeled" />
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/business_menu" />
 
 </RelativeLayout>
